--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.0.14"
+    "md5": "^2.3.0",
+    "mongoose": "^6.0.14",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
