--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "common-tags": "^1.8.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "md5": "^2.3.0",
@@ -19,6 +20,7 @@
     "superagent": "^6.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
