Adding some dependencies

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "common-tags": "^1.8.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "got": "^11.8.3",
     "md5": "^2.3.0",
     "mongoose": "^6.0.14",
     "superagent": "^6.1.0"
